# ImageProcessing

./: Background  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Server.js  cmake_install.cmake  index.html  index.js  main.cpp  package.json  test.cpp
Algo/: Background  CMakeCache.txt  Makefile  cmake_install.cmake  test2.cpp
NewWeb/: clean.php  create_account.php  create_account_submit.php  index.php  login_submit.php  logout.php  php.ini  process.php  upload.php
Web/: Camera CATalogue » Classify — Zooniverse.html
algo/: Makefile  test.cpp
php_server/html/: IMAGEDATA  README.md  add_admin_submit.php  admin.php  black.js  black2.js  browse.php  browse_query.php  browse_send.php  change_password_submit.php  clean.php  clean2.php  create_account.php  create_account_submit.php  d3.button.js  download.php  download_browse.php  download_manage.php  download_test.php  im_manage.css  im_manage.php  im_test.php  index.php  login.php  login_submit.php  manage.php  members.php  process.php  select.php  send.php  start.php  test.php  upload.php  view.php  view2.php  view3.php
php_server/html/css/: aa.css  im_manage.css  modal.css
php_server/html/test/: indextest.html  website - Shortcut.lnk
views/layouts/: main.hbs  main.hbs~
web/: add_admin.php  add_admin_submit.php  adduser_submit.php  adduser_submit.php~  admin.php  change_password.php  change_password_submit.php  clean.php  create_account.php  create_account_submit.php  download.php  download2.php  index.php  login.php  login_submit.php  logout.php  php.ini  process.php  start.php  upload.php  upload2.php
